fix some issues in the summary and in student details view
mostly type script errors
programming summary does not need a submission
added some additional checks in case the submission is not available

--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -47,10 +47,14 @@
                 <fa-icon [icon]="'save'" [ngbTooltip]="getWorkingTimeToolTip()"></fa-icon>
                 <span jhiTranslate="entity.action.save" [ngbTooltip]="getWorkingTimeToolTip()">Save</span>
             </button>
-            <button *ngIf="course?.isAtLeastInstructor" class="btn btn-primary" [routerLink]="'../summary'">
-                <span jhiTranslate="artemisApp.exam.summary">Summary</span>
-            </button>
         </form>
+    </div>
+
+    <div class="mb-3">
+        <h5><span jhiTranslate="artemisApp.studentExams.summary">Student Summary</span></h5>
+        <button *ngIf="course?.isAtLeastInstructor" class="btn btn-primary" [routerLink]="'../summary'">
+            <span jhiTranslate="artemisApp.exam.summary">Summary</span>
+        </button>
     </div>
 
     <div class="mb-3">
