--- a/src/main/webapp/app/exam/participate/summary/exercises/file-upload-exam-summary/file-upload-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/file-upload-exam-summary/file-upload-exam-summary.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="submission">
     <a (click)="downloadFile(submission.filePath)">{{ 'artemisApp.fileUploadAssessment.submissionFile' | translate }}</a>
     <span class="ml-2 badge badge-info">
         {{ attachmentExtension(submission.filePath!) | uppercase }}
