--- a/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
@@ -31,6 +31,16 @@
                     <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                     <span jhiTranslate="artemisApp.studentExams.startExercises">Start Exercises</span>
                 </button>
+                <button class="btn btn-danger ml-1" style="height: 40px;" (click)="handleUnlockAllRepositories()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
+                    <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <fa-icon [icon]="'exclamation-triangle'" class="text-warning"></fa-icon>
+                    <span jhiTranslate="artemisApp.studentExams.unlockAllRepositories">Unlock all repositories</span>
+                </button>
+                <button class="btn btn-danger ml-1" style="height: 40px;" (click)="handleLockAllRepositories()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
+                    <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <fa-icon [icon]="'exclamation-triangle'" class="text-warning"></fa-icon>
+                    <span jhiTranslate="artemisApp.studentExams.lockAllRepositories">Lock all repositories</span>
+                </button>
                 <button
                     class="btn btn-primary ml-1"
                     style="height: 40px;"
