--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -1,6 +1,11 @@
 <div>
     <h2>
-        {{ 'artemisApp.exam.examSummary.yourSubmissionTo' | translate: { examTitle: studentExam.exam.title, studentName: studentExam.user.name } }}
+        <ng-container *ngIf="!instructorView">
+            {{ 'artemisApp.exam.examSummary.yourSubmissionTo' | translate: { examTitle: studentExam.exam.title, studentName: studentExam.user.name } }}
+        </ng-container>
+        <ng-container *ngIf="instructorView">
+            {{ 'artemisApp.exam.examSummary.studentSubmissionTo' | translate: { examTitle: studentExam.exam.title, studentName: studentExam.user.name } }}
+        </ng-container>
         <button class="btn btn-primary float-right" (click)="printPDF()">
             <fa-icon [icon]="'print'"></fa-icon>
             <span jhiTranslate="artemisApp.exam.examSummary.exportPDF">Export PDF</span>
@@ -42,11 +47,7 @@
             </ng-container>
             <!-- Programming Exercise -->
             <ng-container *ngIf="exercise.type === PROGRAMMING">
-                <jhi-programming-exam-summary
-                    [exercise]="exercise"
-                    [participation]="getParticipationForProgrammingExercise(exercise)"
-                    [submission]="getSubmissionForExercise(exercise)"
-                ></jhi-programming-exam-summary>
+                <jhi-programming-exam-summary [exercise]="exercise" [participation]="getParticipationForProgrammingExercise(exercise)"></jhi-programming-exam-summary>
             </ng-container>
             <!-- File Upload Exercise -->
             <ng-container *ngIf="exercise.type === FILE_UPLOAD">
