--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -79,6 +79,18 @@
                         </div>
 
                         <div class="btn-group flex-btn-group-container">
+                            <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
+                                <button
+                                    type="button"
+                                    *ngIf="isAtLeastInstructor"
+                                    [routerLink]="['/course-management', course.id, 'exams', exam.id, 'scores']"
+                                    class="btn btn-info btn-sm mr-1 mb-1"
+                                >
+                                    <fa-icon [icon]="'eye'"></fa-icon>
+                                    <span class="d-none d-md-inline">{{ 'entity.action.scores' | translate }}</span>
+                                </button>
+                            </div>
+
                             <div class="btn-group-vertical mr-1 mb-1">
                                 <button
                                     *ngIf="isAtLeastInstructor"
@@ -91,6 +103,7 @@
                                     <span class="d-none d-md-inline">{{ 'artemisApp.examManagement.exerciseGroups' | translate }}</span>
                                 </button>
                             </div>
+
                             <!--
                             <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
                                 <button type="submit" *ngIf="isAtLeastInstructor" [routerLink]="[exam.id, 'assessmentDashboard']" class="btn btn-primary btn-sm mr-1 mb-1">
