--- a/src/main/webapp/app/course/manage/course-management.component.html
+++ b/src/main/webapp/app/course/manage/course-management.component.html
@@ -151,7 +151,7 @@
                                         <span class="d-none d-md-inline">{{ 'entity.action.lecture' | translate }}</span>
                                     </button>
                                 </div>
-                                <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
+                                <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR', 'ROLE_TA']">
                                     <button
                                         *ngIf="showExamButton && course.isAtLeastInstructor"
                                         type="submit"
