--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -67,7 +67,7 @@
                     <td class="text-right">
                         <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR', 'ROLE_TA']">
                             <button
-                                *ngIf="isAtLeastInstructor"
+                                *ngIf="isAtLeastTutor"
                                 type="submit"
                                 [routerLink]="[exam.id, 'tutor-exam-dashboard']"
                                 class="btn btn-primary btn-sm mr-1 mb-1 exercise-button"
