Introduce authority checks to exercise row buttons

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -148,9 +148,8 @@
                         </td>
                         <td class="d-flex justify-content-end">
                             <jhi-exam-exercise-row-buttons
-                                [courseId]="courseId"
+                                [course]="course"
                                 [exercise]="exercise"
-                                [examMode]="true"
                                 [examId]="examId"
                                 [exerciseGroupId]="exerciseGroup.id"
                                 (onDeleteExercise)="loadExerciseGroups()"
