--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -19,8 +19,8 @@
                 &nbsp;<fa-icon [icon]="getIcon(exercise.type)"></fa-icon>&nbsp;
                 <span jhiTranslate="artemisApp.exam.exercise" [translateValues]="{ nr: i + 1 }">Exercise {{ i + 1 }}</span>
             </h5>
+            <!-- TODO change to after publishResultDate -->
             <div *ngIf="true">
-                <!-- TODO change to after publishResultDate-->
                 <jhi-result [participation]="exercise.studentParticipations[0]"></jhi-result>
             </div>
             <button
@@ -33,10 +33,11 @@
             </button>
         </div>
         <div class="card-body question-card-body" [ngbCollapse]="isCollapsed(exercise)">
-            <div *ngIf="exercise.type !== QUIZ">
-                <!-- TODO add after publishResultDate-->
-                <!-- <button class="btn btn-primary float-right" [routerLink]="generateLink(exercise)"> -->
-                <button class="btn btn-primary float-right"><fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon><span>&nbsp;View Result</span></button>
+            <!-- TODO add after publishResultDate-->
+            <div *ngIf="exercise.type !== QUIZ && exercise.type !== PROGRAMMING">
+                <button class="btn btn-primary float-right" [routerLink]="generateLink(exercise)">
+                    <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon><span>&nbsp;View Result</span>
+                </button>
             </div>
             <h5>{{ exercise.title }} [{{ exercise.maxScore }}p]</h5>
             <h6 right-body class="markdown-preview" *ngIf="exercise.problemStatement && exercise.type !== PROGRAMMING">
