modeling-editor.component.ts: output model changes modeling-exam-submission.component.ts: set studentsubmission.isSynched = false on model changes

--- a/src/main/webapp/app/exam/participate/exercises/modeling/modeling-exam-submission.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/modeling/modeling-exam-submission.component.html
@@ -6,7 +6,7 @@
         <jhi-fullscreen>
             <div class="row flex-grow-1">
                 <div *ngIf="studentSubmission && isActive" class="col-12 editor-large">
-                    <jhi-modeling-editor [umlModel]="umlModel" [diagramType]="exercise.diagramType"></jhi-modeling-editor>
+                    <jhi-modeling-editor [umlModel]="umlModel" [diagramType]="exercise.diagramType" (onModelChanged)="modelChanged($event)"></jhi-modeling-editor>
                 </div>
             </div>
         </jhi-fullscreen>
