--- a/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.component.html
@@ -2,8 +2,10 @@
     <!-- Top bar -->
     <nav class="editor-statusbar">
         <!-- Exercise title -->
-        <span class="editor-statusbar__title">{{ exerciseTitle }}</span>
-        <span class="text-muted" *ngIf="exerciseMaxScore">[{{ exerciseMaxScore }} {{ 'artemisApp.examParticipation.points' | translate }}]</span>
+        <h4>
+            <span>{{ exerciseTitle }}</span>
+            <span *ngIf="exerciseMaxScore">&nbsp;[{{ exerciseMaxScore }} {{ 'artemisApp.examParticipation.points' | translate }}]</span>
+        </h4>
         <ng-content select="[editorNavbar]"> </ng-content>
     </nav>
 
