--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -82,7 +82,7 @@
                             <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR', 'ROLE_TA']">
                                 <button
                                     type="button"
-                                    *ngIf="isAtLeastInstructor"
+                                    *ngIf="isAtLeastTutor"
                                     [routerLink]="['/course-management', course.id, 'exams', exam.id, 'scores']"
                                     class="btn btn-info btn-sm mr-1 mb-1"
                                 >
