--- a/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
+++ b/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
@@ -3,8 +3,8 @@
         <div class="col-8">
             <h2>
                 <fa-icon [icon]="'arrow-left'" (click)="back()" class="back-button mr-2"></fa-icon>
-                {{ 'artemisApp.tutorCourseDashboard.pageHeader' | translate }} {{ course?.title }}
-
+                <h2 *ngIf="!isExamMode">{{ 'artemisApp.tutorCourseDashboard.pageHeader' | translate }} {{ course?.title }}</h2>
+                <h2 *ngIf="isExamMode">{{ 'artemisApp.tutorCourseDashboard.pageHeaderExam' | translate }} {{ exam.title }}</h2>
                 <a
                     class="text-primary card-link"
                     *ngIf="course?.isAtLeastInstructor && !isExamMode"
@@ -14,9 +14,6 @@
                     <fa-icon [icon]="'info-circle'" [fixedWidth]="true" style="color: white;"></fa-icon>
                 </a>
             </h2>
-            <h3 *ngIf="isExamMode">
-                {{ exam?.title }}
-            </h3>
         </div>
     </div>
 </div>
