Added Frontend Code for new Fields

--- a/src/main/webapp/app/exam/manage/exams/exam-update.component.html
+++ b/src/main/webapp/app/exam/manage/exams/exam-update.component.html
@@ -54,6 +54,36 @@
                 </div>
             </div>
             <div class="form-row mb-3">
+                <div class="col-sm-4">
+                    <jhi-date-time-picker
+                        labelName="{{ 'artemisApp.examManagement.publishResultsDate' | translate }}"
+                        [(ngModel)]="exam.publishResultsDate"
+                        [error]="!isValidPublishResultsDate"
+                        name="publishResultsDate"
+                        id="publishResultsDate"
+                    ></jhi-date-time-picker>
+                </div>
+                <div class="col-sm-4">
+                    <jhi-date-time-picker
+                        labelName="{{ 'artemisApp.examManagement.examStudentReviewStart' | translate }}"
+                        [(ngModel)]="exam.examStudentReviewStart"
+                        [error]="!isValidExamStudentReviewStart"
+                        name="examStudentReviewStart"
+                        id="examStudentReviewStart"
+                    ></jhi-date-time-picker>
+                </div>
+                <div class="col-sm-4">
+                    <jhi-date-time-picker
+                        labelName="{{ 'artemisApp.examManagement.examStudentReviewEnd' | translate }}"
+                        [(ngModel)]="exam.examStudentReviewEnd"
+                        [error]="!isValidExamStudentReviewEnd"
+                        name="examStudentReviewEnd"
+                        id="examStudentReviewEnd"
+                    ></jhi-date-time-picker>
+                </div>
+            </div>
+
+            <div class="form-row mb-3">
                 <div class="col-sm-6">
                     <label class="form-check-label" for="maxPoints" jhiTranslate="artemisApp.examManagement.maxPoints">Maximum Number of Points in Exam</label>
                     <input id="maxPoints" name="maxPoints" class="form-control" type="number" min="0" [(ngModel)]="exam.maxPoints" />
