--- a/src/main/webapp/app/exercises/text/assess/submission-export/text-submission-export-dialog.component.html
+++ b/src/main/webapp/app/exercises/text/assess/submission-export/text-submission-export-dialog.component.html
@@ -5,36 +5,31 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p
-            *ngIf="!singleParticipantMode"
-            [jhiTranslate]="'instructorDashboard.exportRepos.questions.' + (exercise.teamMode ? 'team' : 'individual')"
-            [translateValues]="{ exerciseTitle: exercise.title, courseTitle: exercise.course?.title }"
-        >
+        <p [jhiTranslate]="'instructorDashboard.exportRepos.questions.individual'" [translateValues]="{ exerciseTitle: exercise.title, courseTitle: exercise.course?.title }">
             Confirm export
         </p>
         <textarea
-            *ngIf="!participationIdList"
             name="studentIds"
             class="export-textarea"
-            [(ngModel)]="participantIdentifierList"
+            [(ngModel)]="repositoryExportOptions.participantIdentifierList"
             required
-            [disabled]="singleParticipantMode || repositoryExportOptions.exportAllParticipants"
+            [disabled]="repositoryExportOptions.exportAllParticipants"
         ></textarea>
 
         <!--
         Only show download all checkbox for instructors & admins.
         -->
-        <ng-container *ngIf="!singleParticipantMode">
+        <ng-container>
             <div *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']" class="checkbox">
                 <label class="control-label">
                     <input type="checkbox" name="allStudents" [(ngModel)]="repositoryExportOptions.exportAllParticipants" />
-                    <strong [jhiTranslate]="'artemisApp.programmingExercise.export.' + (exercise.teamMode ? 'downloadAllTeams' : 'downloadAllStudents')">
-                        Or download the repositories of all {{ exercise.teamMode ? 'teams' : 'students' }}
+                    <strong [jhiTranslate]="'artemisApp.programmingExercise.export.downloadAllStudents')">
+                        Or download the submissions of all students }}
                     </strong>
                 </label>
             </div>
         </ng-container>
-        <ng-container *ngIf="!singleParticipantMode">
+        <ng-container>
             <div class="checkbox">
                 <label class="control-label">
                     <input type="checkbox" name="filterLateSubmissions" [(ngModel)]="this.repositoryExportOptions.filterLateSubmissions" />
@@ -52,38 +47,14 @@
                 ></jhi-date-time-picker>
             </div>
         </ng-container>
-        <div *ngIf="!singleParticipantMode" class="checkbox">
-            <label class="control-label">
-                <input type="checkbox" name="addParticipantName" [(ngModel)]="this.repositoryExportOptions.addParticipantName" />
-                <strong [jhiTranslate]="'artemisApp.programmingExercise.export.' + (exercise.teamMode ? 'addTeamName' : 'addStudentName')">
-                    Add {{ exercise.teamMode ? 'team' : 'student' }} name to project
-                </strong>
-            </label>
-        </div>
-        <div class="checkbox">
-            <label class="control-label">
-                <input type="checkbox" name="combineStudentCommits" [(ngModel)]="this.repositoryExportOptions.combineStudentCommits" />
-                <strong jhiTranslate="artemisApp.programmingExercise.export.combineStudentCommits">Combine all changes after instructor into one commit</strong>
-            </label>
-        </div>
-        <div class="checkbox">
-            <label class="control-label">
-                <input type="checkbox" name="normalizeCodeStyle" [(ngModel)]="this.repositoryExportOptions.normalizeCodeStyle" />
-                <strong jhiTranslate="artemisApp.programmingExercise.export.normalizeCodeStyle">Normalize code style (line endings, encoding)</strong>
-            </label>
-        </div>
-        <p *ngIf="!singleParticipantMode" jhiTranslate="instructorDashboard.exportRepos.timeWarning">
-            <b>Note:</b> This action can take several minutes depending on number and size of repositories.
-        </p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
         </button>
         <button
-            [jhiFeatureToggle]="FeatureToggle.PROGRAMMING_EXERCISES"
             type="submit"
-            [disabled]="!participationIdList && !participantIdentifierList && !this.repositoryExportOptions.exportAllParticipants && !exportInProgress"
+            [disabled]="!repositoryExportOptions.participantIdentifierList && !repositoryExportOptions.exportAllParticipants && !exportInProgress"
             class="btn btn-default"
         >
             <span *ngIf="this.exportInProgress" class="mr-1"><fa-icon [icon]="'circle-notch'" spin="true"></fa-icon></span>
