--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -65,9 +65,9 @@
                     <td>{{ exam.startDate | durationTo: exam.endDate }}</td>
                     <td>{{ exam.numberOfRegisteredUsers }}</td>
                     <td class="text-right">
-                        <div class="btn-group-vertical mr-1 mb-1">
+                        <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR', 'ROLE_TA']">
                             <button
-                                *ngIf="isAtLeastInstructor"
+                                *ngIf="isAtLeastTutor"
                                 type="submit"
                                 [routerLink]="[exam.id, 'tutor-exam-dashboard']"
                                 class="btn btn-primary btn-sm mr-1 mb-1 exercise-button"
@@ -79,10 +79,10 @@
                         </div>
 
                         <div class="btn-group flex-btn-group-container">
-                            <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
+                            <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR', 'ROLE_TA']">
                                 <button
                                     type="button"
-                                    *ngIf="isAtLeastInstructor"
+                                    *ngIf="isAtLeastTutor"
                                     [routerLink]="['/course-management', course.id, 'exams', exam.id, 'scores']"
                                     class="btn btn-info btn-sm mr-1 mb-1"
                                 >
