--- a/src/main/webapp/app/exercises/text/assess/submission-export/text-submission-export-dialog.component.html
+++ b/src/main/webapp/app/exercises/text/assess/submission-export/text-submission-export-dialog.component.html
@@ -23,7 +23,7 @@
             <div *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']" class="checkbox">
                 <label class="control-label">
                     <input type="checkbox" name="allStudents" [(ngModel)]="repositoryExportOptions.exportAllParticipants" />
-                    <strong [jhiTranslate]="'artemisApp.programmingExercise.export.downloadAllStudents')">
+                    <strong [jhiTranslate]="'artemisApp.programmingExercise.export.downloadAllStudents'">
                         Or download the submissions of all students }}
                     </strong>
                 </label>
