--- a/src/main/webapp/app/exercises/shared/exercise-scores/exercise-scores.component.html
+++ b/src/main/webapp/app/exercises/shared/exercise-scores/exercise-scores.component.html
@@ -53,7 +53,12 @@
                     [exerciseId]="exercise.id"
                     class="mr-1"
                 ></jhi-programming-assessment-repo-export>
-                <jhi-text-exercise-submission-export *ngIf="exercise.type === ExerciseType.TEXT" [exerciseId]="exercise.id" class="mr-1"></jhi-text-exercise-submission-export>
+                <jhi-exercise-submission-export
+                    *ngIf="exercise.type === ExerciseType.TEXT || exercise.type === ExerciseType.MODELING"
+                    [exerciseId]="exercise.id"
+                    [exerciseType]="exercise.type"
+                    class="mr-1"
+                ></jhi-exercise-submission-export>
                 <button class="btn btn-primary btn-sm" (click)="refresh()">
                     <fa-icon [icon]="'sync'"></fa-icon>
                     <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.refresh">Refresh</span>
