--- a/src/main/webapp/app/exercises/shared/submission-export/submission-export-dialog.component.html
+++ b/src/main/webapp/app/exercises/shared/submission-export/submission-export-dialog.component.html
@@ -1,11 +1,11 @@
 <form *ngIf="!isLoading; else loadingContainer" name="exportForm" role="form" (ngSubmit)="exportSubmissions(exercise.id)" #exportForm="ngForm">
     <div class="modal-header">
-        <h4 class="modal-title" jhiTranslate="entity.exportRepos.title">Confirm export operation</h4>
+        <h4 class="modal-title" jhiTranslate="instructorDashboard.exportSubmissions.title">Confirm export operation</h4>
         <button type="button" class="close" data-dismiss="modal" (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p [jhiTranslate]="'instructorDashboard.exportRepos.questions.individual'" [translateValues]="{ exerciseTitle: exercise.title, courseTitle: exercise.course?.title }">
+        <p [jhiTranslate]="'instructorDashboard.exportSubmissions.question'" [translateValues]="{ exerciseTitle: exercise.title, courseTitle: exercise.course?.title }">
             Confirm export
         </p>
         <textarea
@@ -23,7 +23,7 @@
             <div *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']" class="checkbox">
                 <label class="control-label">
                     <input type="checkbox" name="allStudents" [(ngModel)]="submissionExportOptions.exportAllParticipants" />
-                    <strong [jhiTranslate]="'artemisApp.programmingExercise.export.downloadAllStudents'">
+                    <strong [jhiTranslate]="'instructorDashboard.exportSubmissions.downloadAllStudents'">
                         Or download the submissions of all students }}
                     </strong>
                 </label>
@@ -33,11 +33,11 @@
             <div class="checkbox">
                 <label class="control-label">
                     <input type="checkbox" name="filterLateSubmissions" [(ngModel)]="this.submissionExportOptions.filterLateSubmissions" />
-                    <strong jhiTranslate="artemisApp.programmingExercise.export.filterLateSubmissions">Filter late submissions</strong>
+                    <strong jhiTranslate="instructorDashboard.exportSubmissions.filterLateSubmissions">Filter late submissions</strong>
                 </label>
             </div>
             <div class="form-group">
-                <strong jhiTranslate="artemisApp.programmingExercise.export.filterLateSubmissionsDate"
+                <strong jhiTranslate="instructorDashboard.exportSubmissions.filterLateSubmissionsDate"
                     >Date for filter late submissions (defaults to exercise due date if not set)</strong
                 >
                 <jhi-date-time-picker
