--- a/src/main/webapp/app/exercises/shared/exam-exercise-row-buttons/exam-exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/shared/exam-exercise-row-buttons/exam-exercise-row-buttons.component.html
@@ -54,11 +54,14 @@
         <span class="d-none d-md-inline" jhiTranslate="artemisApp.programmingExercise.manageTestCases.title">Manage Test Cases</span>
     </button>
 
+    <!-- The route expects a preferred participationId. As we only have Exercises and not ProgrammingExercises with
+    participations, we pass a hardcoded number. The code editor component will load the proper ProgrammingExercise, choose
+    a participation and update the url displayed in the browser -->
     <button
         type="submit"
         *ngIf="course.isAtLeastInstructor && exercise.type === exerciseType.PROGRAMMING"
-        [routerLink]="['/course-management', course.id, 'programming-exercises', exercise.id, 'code-editor']"
-        class="btn btn-info btn-sm mr-1 mb-1"
+        [routerLink]="['/course-management', course.id, 'programming-exercises', exercise.id, 'code-editor', -1]"
+        class="btn btn-info btn-sm mr-1"
     >
         <fa-icon [icon]="'pencil-alt'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.editInEditor">Edit in Editor</span>
